# XSplash

./: .gitignore  CMakeLists.txt  README.md
CMake/: CheckGit.cmake  FindClang.cmake  SEShaders.cmake
Source/: main.cpp
